@@ -10,6 +10,7 @@ set(TEST_DATA_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TEST_DATA_DIR})
 
 foreach (TN IN ITEMS jbl_test1
+                     jbl_test2
                      jbl_test_binn1
                      jbl_test_binn2)
   add_executable(${TN} ${TN}.c)
