@@ -58,8 +58,8 @@ void _jbl_test1_1(int num, iwrc expected, jbl_print_flags_t pf) {
   fclose(f1);
   fclose(f2);
 
-  fprintf(stderr, "ED %s\n", edata);
-  fprintf(stderr, "ED %s\n", iwxstr_ptr(res));
+  fprintf(stderr, "ED %d\n%s\n", num, edata);
+  fprintf(stderr, "ED %d\n%s\n", num, iwxstr_ptr(res));
 
   CU_ASSERT_EQUAL_FATAL(strcmp(edata, iwxstr_ptr(res)), 0);
 
